Refactor WebApi to implement clean architecture
Removed Domain project and restructured WebApi to adopt a clean architecture pattern. Key changes include:

- Added `AppDbContext` with SQL Server configuration.
- Implemented JWT authentication and authorization.
- Integrated FluentValidation for model validation.
- Added `AuthController` for user authentication.
- Added `PropertiesController` for CRUD operations on properties.
- Introduced `Property`, `Host`, `User`, and `DomainEvent` entities.
- Added repository and unit of work patterns.
- Created initial database migration for schema setup.
- Updated `appsettings.json` with connection strings and JWT settings.
- Updated `WebApi.csproj` with necessary package references.

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost,1434;Initial Catalog=PTNET8;Integrated Security=false;User ID=sa;Password=JoseDev123*; TrustServerCertificate=True;"
+  },
+  "JwtSettings": {
+    "SecretKey": "PTNET8+12345",
+    "Issuer": "PTNET8+Issuer",
+    "Audience": "PTNET8+Audience"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
