--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -3,7 +3,7 @@
     "DefaultConnection": "Data Source=localhost,1434;Initial Catalog=PTNET8;Integrated Security=false;User ID=sa;Password=JoseDev123*; TrustServerCertificate=True;"
   },
   "JwtSettings": {
-    "SecretKey": "PTNET8+12345",
+    "SecretKey": "PTNET8+123456789_123456789+PTNET8",
     "Issuer": "PTNET8+Issuer",
     "Audience": "PTNET8+Audience"
   },
