Refactor AuthController and sanitize appsettings.json
Updated `AuthController.cs` to modify the construction of the JWT key by appending a hardcoded string to the `JwtSettings:SecretKey`.

Sanitized `appsettings.json` by clearing sensitive values:
- Replaced `DefaultConnection` connection string with an empty string.
- Cleared `JwtSettings` values for `SecretKey`, `Issuer`, and `Audience`.

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,11 +1,11 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost,1434;Initial Catalog=PTNET8;Integrated Security=false;User ID=sa;Password=JoseDev123*; TrustServerCertificate=True;"
+    "DefaultConnection": ""
   },
   "JwtSettings": {
-    "SecretKey": "PTNET8+123456789_123456789+PTNET8",
-    "Issuer": "PTNET8+Issuer",
-    "Audience": "PTNET8+Audience"
+    "SecretKey": "",
+    "Issuer": "",
+    "Audience": ""
   },
   "Logging": {
     "LogLevel": {
